force-app/main/default/objects/Natural_Account__c/fields/Type_A_E_I_L__c.field-meta.xml
<CustomField>
    <fullName>Type_A_E_I_L__c</fullName>
    <label>Type (A,E,I,L)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>